<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Lab4</string>
<string name="email">Enter your email address:</string>
<string name="password">Type your password:</string>
<string name="typeEmail">Type email here</string>
<string name="typePassword">Password here</string>
<string name="login">LOGIN</string>
<string name="profile">Your profile</string>
<string name="name1">Your name</string>
<string name="name2">Enter your name</string>
<string name="email1">Your email:</string>
<string name="email2">Enter your email</string>
<string name="picture1">Your picture:</string>
<string name="clickbutton">Click the button above to take a picture</string>
<string name="goTochat">Go to Chat</string>
<string name="chatTitle">Jason Chat Application</string>
<string name="pleaseChat">Please type to chat</string>


        <string-array name="mobileArray1">
            <item>Mercury</item>
            <item>Venus</item>
            <item>Earth</item>
            <item>Mars</item>
        </string-array>


</resources>
