<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textSize="16sp"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_editor_absoluteY="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <EditText
        android:id="@+id/typeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/typeEmail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/password"
        android:textSize="20sp"

        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <EditText
        android:id="@+id/typePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_below="@+id/password"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

</LinearLayout>
